<resources>
    <string name="app_name">StudyTime</string>

    <!-- Menu Items -->
    <string name="sign_out">Sign Out</string>
    <string name="invite_menu_label">Invite</string>
    <string name="refresh">Refresh</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- EditText Hints -->
    <string name="first_hint">First Name</string>
    <string name="last_hint">Last Name</string>
    <string name="enter_email_hint">Email Address</string>
    <string name="enter_pass_hint">Password</string>
    <string name="enter_password_hint">Password</string>
    <string name="enter_phone_hint">Phone Number</string>
    <string name="group_name_hint">Group Name</string>
    <string name="location_hint">Location</string>
    <string name="topic_hint">Topic</string>

    <!-- Button Labels -->
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="create_group">Create Group</string>
    <string name="create">Create Account</string>
    <string name="update">Update Account</string>

    <!-- Labels -->
    <string name="welcome">Welcome\n to\n Study Time</string>
    <string name="most_recent">Most Recent Group</string>
    <string name="upcoming">Upcoming Groups</string>
    <string name="no_account">No account yet? Create one!</string>
    <string name="continue_no_account">Continue without an account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">EditProfile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
