<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/off_white">

    <!-- Logo will go here -->
    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_image"
        android:text="@string/welcome"
        android:textSize="@dimen/font_size_xxlarge"
        android:textAlignment="center"
        android:padding="@dimen/pad_marg_large"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_hint"
            android:inputType="textPersonName"
            android:padding="@dimen/pad_marg_small"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_hint"
            android:inputType="textPersonName"
            android:padding="@dimen/pad_marg_small"
            android:layout_marginTop="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_hint"
            android:inputType="phone"
            android:padding="@dimen/pad_marg_small"
            android:layout_marginTop="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/pad_marg_small"
            android:layout_marginTop="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass_hint"
            android:inputType="textPassword"
            android:padding="@dimen/pad_marg_small"
            android:layout_marginTop="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Create account button -->
    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="@dimen/font_size_medium"
        android:padding="@dimen/pad_marg_small"
        android:layout_marginTop="5dp"
        android:background="@color/dark_turqoise"
        android:textColor="@color/white"
        />

    <!-- link if you already have an account -->
    <TextView
        android:id="@+id/link_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_marg_medium"
        android:layout_marginBottom="@dimen/pad_marg_medium"
        android:text="Already have an account? Login!"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/turqoise"
        android:gravity="center"/>

</LinearLayout>