<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_group"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad_marg_medium"
    tools:context="com.techexblog.studytime.NewGroupActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/groupNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name_hint"
            android:inputType="textCapSentences"
            android:layout_marginTop="5dp"
            android:padding="@dimen/pad_marg_small"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/topicWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_group_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic_hint"
            android:inputType="textCapSentences"
            android:layout_marginTop="5dp"
            android:padding="@dimen/pad_marg_small"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/locationNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/input_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:inputType="textCapSentences"
            android:layout_marginTop="5dp"
            android:padding="@dimen/pad_marg_small"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_group_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:textSize="@dimen/font_size_medium"
        android:padding="@dimen/pad_marg_small"
        android:layout_marginTop="@dimen/pad_marg_small"
        android:background="@color/red"
        android:textColor="@color/white"/>

</LinearLayout>
