<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/off_white">

    <!-- Logo will go here -->
    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_image"
        android:text="@string/welcome"
        android:textSize="@dimen/font_size_xxlarge"
        android:textAlignment="center"
        android:padding="@dimen/pad_marg_large"/>

    <!-- Email entry -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginEmailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/pad_marg_small"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password entry -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/pad_marg_small"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Login button -->
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium"
        android:padding="@dimen/pad_marg_small"
        android:layout_marginTop="@dimen/pad_marg_medium"
        android:layout_marginBottom="@dimen/pad_marg_medium"
        android:onClick="login"
        android:layout_gravity="center"
        android:background="@color/turqoise"/>

    <!-- Create account button -->
    <TextView
        android:id="@+id/link_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_marg_medium"
        android:layout_marginBottom="@dimen/pad_marg_medium"
        android:text="No account yet? Create one!"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/turqoise"
        android:gravity="center"/>

    <!--Skip account creation button -->
    <TextView
        android:id="@+id/link_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_marg_large"
        android:text="Continue without an account"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/turqoise"
        android:gravity="center"/>
</LinearLayout>